--- a/부트활용1/index.html
+++ b/부트활용1/index.html
@@ -13,6 +13,7 @@
 
 <body>
   <!-- boot top nav bar -->
+  <!-- test -->
   <a class="navbar-brand main" href="#">
     <img src="./img/sp_common.png">
   </a>
@@ -476,7 +477,7 @@
     <!-- boot footer -->
     <footer class="container footer py-5">
       <div class="row">
-        <div class="col-12 col-md">          
+        <div class="col-12 col-md">
           <p class="card-text">싱그러운 집</p>
           <small class="d-block mb-3 text-muted">&copy; 2017-2022</small>
         </div>
