gnb영역컨텐츠 일부추가
11:43

--- a/클론코딩3/index.html
+++ b/클론코딩3/index.html
@@ -45,6 +45,7 @@
         <div id="gnb">
           <div class="gnb-wrap layout">
             <ul class="depth1-ul n7">
+              <!-- 정보공개 -->
               <li class="n1 gnb-head">
                 <a class="a n1" href="#"><span>정보공개</span></a>
                 <div class="item">
@@ -122,6 +123,7 @@
                   </ul>
                 </div>
               </li>
+              <!-- 민원,행정 -->
               <li class="n2 gnb-head">
                 <a class="a n2" href="#"><span>민원, 행정</span></a>
                 <div class="item">
@@ -244,12 +246,94 @@
                   </ul>
                 </div>
               </li>
+              <!-- 중구소식 -->
               <li class="n3 gnb-head"><a href="#"><span>중구소식</span></a>
               </li>
-              <li class="n4 gnb-head"><a href="#"><span>구민광장</span></a>
+              <!-- 구민광장 -->
+              <li class="n4 gnb-head">
+                <a class="a n4" href="#"><span>구민광장</span></a>
+                <div class="item">
+                  <div class="gnb-title">
+                    <strong>구민광장&nbsp;</strong>
+                    <p>구민여러분의 소리를 귀담아 꿈과 희망이 있는 미래도시 중구의 내일을 만들어갑니다.</p>
+                  </div>
+                  <ul class="depth2-ul depth2-1">
+                    <li class="li n1_1">
+                      <a href="#">
+                        <span>정보화교육 안내&nbsp;</span>
+                      </a>
+                      <ul class="depth3-ul">
+                        <li><a href="#"><span>정보화교육일정&nbsp;</span></a></li>
+                      </ul>
+                    </li>
+                    <li class="li n1_1">
+                      <a href="#">
+                        <span>열린광장&nbsp;</span>
+                      </a>
+                      <ul class="depth3-ul">
+                        <li><a href="#"><span>자유게시판&nbsp;</span></a></li>
+                        <li><a href="#"><span>분묘개장공고&nbsp;</span></a></li>
+                        <li><a href="#"><span>칭찬해~孝&nbsp;</span></a></li>
+                        <li><a href="#"><span>나눔장터&nbsp;</span></a></li>
+                        <li><a href="#"><span>폐보도블록 무상나눔방&nbsp;</span></a></li>
+                      </ul>
+                    </li>
+                    <li class="li n1_1">
+                      <a href="#">
+                        <span>희망심기&nbsp;</span>
+                      </a>
+                      <ul class="depth3-ul">
+                        <li><a href="#"><span>희망심기 2040&nbsp;</span></a></li>
+                        <li><a href="#"><span>이웃사랑실천&nbsp;</span></a></li>
+                      </ul>
+                    </li>
+                    <li class="li n1_1">
+                      <a href="#">
+                        <span>적극행정&nbsp;</span>
+                      </a>
+                      <ul class="depth3-ul">
+                        <li><a href="#"><span>소개&nbsp;</span></a></li>
+                        <li><a href="#"><span>국민추천&nbsp;</span></a></li>
+                        <li><a href="#"><span>내소식&nbsp;</span></a></li>
+                        <li><a href="#"><span>신고센터&nbsp;</span></a></li>
+                      </ul>
+                    </li>
+                    <li class="li n1_1">
+                      <a href="#">
+                        <span>행정규제&nbsp;</span>
+                      </a>
+                      <ul class="depth3-ul">
+                        <li><a href="#"><span>제도안내&nbsp;</span></a></li>
+                        <li><a href="#"><span>규제사무목록공표&nbsp;</span></a></li>
+                        <li><a href="#"><span>의견제출&nbsp;</span></a></li>
+                        <li><a href="#"><span>규제입증요청&nbsp;</span></a></li>
+                        <li><a href="#"><span>규제개혁신문고&nbsp;</span></a></li>
+                      </ul>
+                    </li>
+                    <li class="li n1_1">
+                      <a href="#">
+                        <span>구민의견수렴&nbsp;</span>
+                      </a>
+                      <ul class="depth3-ul">
+                        <li><a href="#"><span>설문조사&nbsp;</span></a></li>
+                      </ul>
+                    </li>
+                    <li class="li n1_1">
+                      <a href="#">
+                        <span>취업정보&nbsp;</span>
+                      </a>
+                      <ul class="depth3-ul">
+                        <li><a href="#"><span>대전 일자리 검색&nbsp;</span></a></li>
+                        <li><a href="#"><span>대기업 채용정보&nbsp;</span></a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
               </li>
+              <!-- 중구소개 -->
               <li class="n5 gnb-head"><a href="#"><span>중구소개</span></a>
               </li>
+              <!-- 분야별정보 -->
               <li class="n6 gnb-head"><a href="#"><span>분야별정보</span></a>
               </li>
             </ul>
