--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>TEST</title>
   </head>
   <body>
-    <a href="./부트활용1/index.html">부트활용</a>
+    <a href="./부트활용1/index.html">부트스트랩활용</a>
     <a href="./사스활용/index.html">사스활용</a>
-    <a href="./클론코딩/clone/index.html">첫번째 클론코딩(네오포레)</a>
-    <a href="./클론코딩2/index.html">두번째 클론코딩(코오롱)</a>
-    <a href="./클론코딩3/index.html">세번째 (구청)</a>
+    <a href="./클론코딩/clone/index.html">첫번째 클론코딩</a>
+    <a href="./클론코딩2/index.html">두번째 클론코딩</a>
+    <a href="./클론코딩3/index.html">세번째</a>
   </body>
 </html>
