--- a/클론코딩3/index.html
+++ b/클론코딩3/index.html
@@ -34,7 +34,9 @@
     <div class="top-gnb">
       <div class="logo-gnb layout">
         <h1 class="logo-wrap" id="logo">
-          <a href="#">logo</a>
+          <a href="#">
+            <img class="logo" src="./img/svg1.png">
+          </a>
         </h1>
         <ul class="utile-wrap">
           <li class="box pc"><a href="#">item</a></li>
