--- a/클론코딩3/index.html
+++ b/클론코딩3/index.html
@@ -333,7 +333,136 @@
                 </div>
               </li>
               <!-- 중구소개 -->
-              <li class="n5 gnb-head"><a href="#"><span>중구소개</span></a>
+              <li class="n5 gnb-head">
+                <a class="a n5" href="#"><span>중구소개</span></a>
+                <div class="item">
+                  <div class="gnb-title">
+                    <strong>중구소개&nbsp;</strong>
+                    <p>효 문화 중심도시 중구! 대전광역시 중구를 소개합니다.</p>
+                  </div>
+                  <ul class="depth2-ul depth2-1">
+                    <li class="li n1_1">
+                      <a href="#">
+                        <span>구청안내&nbsp;</span>
+                      </a>
+                      <ul class="depth3-ul">
+                        <li><a href="#"><span>조직도&nbsp;</span></a></li>
+                        <li><a href="#"><span>기구 및 인력&nbsp;</span></a></li>
+                        <li><a href="#"><span>조직운영 핵심지표공개&nbsp;</span></a></li>
+                        <li><a href="#"><span>전화번호안내&nbsp;</span></a></li>
+                        <li><a href="#"><span>팩스번호안내&nbsp;</span></a></li>
+                        <li><a href="#"><span>청사안내&nbsp;</span></a></li>
+                        <li><a href="#"><span>오시는길&nbsp;</span></a></li>
+                      </ul>
+                    </li>
+                    <li class="li n1_1">
+                      <a href="#">
+                        <span>구정현황&nbsp;</span>
+                      </a>
+                      <ul class="depth3-ul">
+                        <li><a href="#"><span>주요연혁&nbsp;</span></a></li>
+                        <li><a href="#"><span>중구옛모습&nbsp;</span></a></li>
+                        <li><a href="#"><span>구정의방향&nbsp;</span></a></li>
+                        <li><a href="#"><span>행정구역&nbsp;</span></a></li>
+                        <li><a href="#"><span>지역특성 및 입지여건&nbsp;</span></a></li>
+                        <li><a href="#"><span>구민헌장&nbsp;</span></a></li>
+                        <li><a href="#"><span>상징물&nbsp;</span></a></li>
+                      </ul>
+                    </li>
+                    <li class="li n1_1">
+                      <a href="#">
+                        <span>실과별안내&nbsp;</span>
+                      </a>
+                      <ul class="depth3-ul">
+                        <li><a href="#"><span>기획공보실&nbsp;</span></a></li>
+                        <li><a href="#"><span>감사실&nbsp;</span></a></li>
+                        <li><a href="#"><span>총무과&nbsp;</span></a></li>
+                        <li><a href="#"><span>문화체육과&nbsp;</span></a></li>
+                        <li><a href="#"><span>회계정보과&nbsp;</span></a></li>
+                        <li><a href="#"><span>세무과&nbsp;</span></a></li>
+                        <li><a href="#"><span>민원봉사과&nbsp;</span></a></li>
+                        <li><a href="#"><span>지적과&nbsp;</span></a></li>
+                        <li><a href="#"><span>복지정책과&nbsp;</span></a></li>
+                        <li><a href="#"><span>사회복지과&nbsp;</span></a></li>
+                        <li><a href="#"><span>여성가족과&nbsp;</span></a></li>
+                        <li><a href="#"><span>경제기업과&nbsp;</span></a></li>
+                        <li><a href="#"><span>환경과&nbsp;</span></a></li>
+                        <li><a href="#"><span>위생과&nbsp;</span></a></li>
+                        <li><a href="#"><span>도시과&nbsp;</span></a></li>
+                        <li><a href="#"><span>안전총괄과&nbsp;</span></a></li>
+                        <li><a href="#"><span>건설과&nbsp;</span></a></li>
+                        <li><a href="#"><span>건축과&nbsp;</span></a></li>
+                        <li><a href="#"><span>공원녹지과&nbsp;</span></a></li>
+                        <li><a href="#"><span>교통과&nbsp;</span></a></li>
+                        <li><a href="#"><span>도시활성화과&nbsp;</span></a></li>
+                      </ul>
+                    </li>
+                    <li class="li n1_1">
+                      <a href="#">
+                        <span>동행정복지센터&nbsp;</span>
+                      </a>
+                      <ul class="depth3-ul">
+                        <li><a href="#"><span>은행선화동&nbsp;</span></a></li>
+                        <li><a href="#"><span>목동&nbsp;</span></a></li>
+                        <li><a href="#"><span>중촌동&nbsp;</span></a></li>
+                        <li><a href="#"><span>대흥동&nbsp;</span></a></li>
+                        <li><a href="#"><span>문창동&nbsp;</span></a></li>
+                        <li><a href="#"><span>석교동&nbsp;</span></a></li>
+                        <li><a href="#"><span>대사동&nbsp;</span></a></li>
+                        <li><a href="#"><span>부사동&nbsp;</span></a></li>
+                        <li><a href="#"><span>용두동&nbsp;</span></a></li>
+                        <li><a href="#"><span>오류동&nbsp;</span></a></li>
+                        <li><a href="#"><span>태평1동&nbsp;</span></a></li>
+                        <li><a href="#"><span>태평2동&nbsp;</span></a></li>
+                        <li><a href="#"><span>유천1동&nbsp;</span></a></li>
+                        <li><a href="#"><span>유천2동&nbsp;</span></a></li>
+                        <li><a href="#"><span>문화1동&nbsp;</span></a></li>
+                        <li><a href="#"><span>문화2동&nbsp;</span></a></li>
+                        <li><a href="#"><span>산성동&nbsp;</span></a></li>
+                      </ul>
+                    </li>
+                    <li class="li n1_1">
+                      <a href="#">
+                        <span>관련사이트&nbsp;</span>
+                      </a>
+                      <ul class="depth3-ul">
+                      </ul>
+                    </li>
+                    <li class="li n1_1">
+                      <a href="#">
+                        <span>통계&nbsp;</span>
+                      </a>
+                      <ul class="depth3-ul">
+                        <li><a href="#"><span>연도별 인구통계&nbsp;</span></a></li>
+                        <li><a href="#"><span>월별인구통계&nbsp;</span></a></li>
+                        <li><a href="#"><span>구정주요통계&nbsp;</span></a></li>
+                        <li><a href="#"><span>통계연보&nbsp;</span></a></li>
+                        <li><a href="#"><span>사업체기초통계조사&nbsp;</span></a></li>
+                        <li><a href="#"><span>광업제조업통계조사&nbsp;</span></a></li>
+                        <li><a href="#"><span>통계청&nbsp;</span></a></li>
+                        <li><a href="#"><span>국가통계포털사이트&nbsp;</span></a></li>
+                        <li><a href="#"><span>행정안전부&nbsp;</span></a></li>
+                      </ul>
+                    </li>
+                    <li class="li n1_1">
+                      <a href="#">
+                        <span>사진으로보는 중구&nbsp;</span>
+                      </a>
+                      <ul class="depth3-ul">
+                      </ul>
+                    </li>
+                    <li class="li n1_1">
+                      <a href="#">
+                        <span>자매결연도시&nbsp;</span>
+                      </a>
+                      <ul class="depth3-ul">
+                        <li><a href="#"><span>국제자매결연도시&nbsp;</span></a></li>
+                        <li><a href="#"><span>국내자매결연도시&nbsp;</span></a></li>
+                        <li><a href="#"><span>우호협력도시&nbsp;</span></a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
               </li>
               <!-- 분야별정보 -->
               <li class="n6 gnb-head"><a href="#"><span>분야별정보</span></a>
