상단GNB영역 아이콘메뉴추가
.....

--- a/클론코딩3/index.html
+++ b/클론코딩3/index.html
@@ -249,7 +249,52 @@
                 </div>
               </li>
               <!-- 중구소식 -->
-              <li class="n3 gnb-head"><a href="#"><span>중구소식</span></a>
+              <li class="n3 gnb-head">
+                <a class="a n3" href="#"><span>중구소식</span></a>
+                <div class="item second">
+                  <ul class="depth2-ul depth2-2">
+                    <li class="li n1_2">
+                      <a href="#">
+                        <span>중구소식&nbsp;</span>
+                      </a>
+                    </li>
+                    <li class="li n1_2">
+                      <a href="#">
+                        <span>구민리포터 소식&nbsp;</span>
+                      </a>
+                    </li>
+                    <li class="li n1_2">
+                      <a href="#">
+                        <span>주간뉴스&nbsp;</span>
+                      </a>
+                    </li>
+                    <li class="li n1_2">
+                      <a href="#">
+                        <span>공지사항&nbsp;</span>
+                      </a>
+                    </li>
+                    <li class="li n1_2">
+                      <a href="#">
+                        <span>입찰정보&nbsp;</span>
+                      </a>
+                    </li>
+                    <li class="li n1_2">
+                      <a href="#">
+                        <span>고시/공고&nbsp;</span>
+                      </a>
+                    </li>
+                    <li class="li n1_2">
+                      <a href="#">
+                        <span>보도/보도해명&nbsp;</span>
+                      </a>
+                    </li>
+                    <li class="li n1_2">
+                      <a href="#">
+                        <span>채용공고&nbsp;</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </li>
               <!-- 구민광장 -->
               <li class="n4 gnb-head">
@@ -465,7 +510,42 @@
                 </div>
               </li>
               <!-- 분야별정보 -->
-              <li class="n6 gnb-head"><a href="#"><span>분야별정보</span></a>
+              <li class="n6 gnb-head">
+                <a class="a n6" href="#"><span>분야별정보</span></a>
+                <div class="item second">
+                  <ul class="depth2-ul depth2-2">
+                    <li class="li n1_2">
+                      <a class="a2" href="#">
+                        <span>복지&nbsp;</span>
+                      </a>
+                    </li>
+                    <li class="li n1_2">
+                      <a class="a2" href="#">
+                        <span>경제&nbsp;</span>
+                      </a>
+                    </li>
+                    <li class="li n1_2">
+                      <a class="a2" href="#">
+                        <span>도시&nbsp;</span>
+                      </a>
+                    </li>
+                    <li class="li n1_2">
+                      <a class="a2" href="#">
+                        <span>교통&nbsp;</span>
+                      </a>
+                    </li>
+                    <li class="li n1_2">
+                      <a class="a2" href="#">
+                        <span>환경/생활&nbsp;</span>
+                      </a>
+                    </li>
+                    <li class="li n1_2">
+                      <a class="a2" href="#">
+                        <span>재난/안전&nbsp;</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </li>
             </ul>
           </div>
