gnb design update
gnb

--- a/클론코딩3/index.html
+++ b/클론코딩3/index.html
@@ -127,11 +127,11 @@
               </li>
               <!-- 민원,행정 -->
               <li class="n2 gnb-head">
-                <a class="a n2" href="#"><span>민원, 행정</span></a>
+                <a class="a n2" href="#"><span>민원·행정</span></a>
                 <div class="item">
                   <div class="gnb-title">
                     <strong>민원 행정&nbsp;</strong>
-                    <p>구민을 위한 신속하고 편리한 민원처리를 위해 최선을 다하겠습니다..</p>
+                    <p>구민을 위한 신속하고 편리한 민원처리를 위해 최선을 다하겠습니다.</p>
                   </div>
                   <ul class="depth2-ul depth2-1">
                     <li class="li n1_1">
@@ -182,9 +182,9 @@
                         <li><a href="#"><span>식품안전소비자신고&nbsp;</span></a></li>
                         <li><a href="#"><span>지방세 납세자보호관&nbsp;</span></a></li>
                         <li><a href="#"><span>불법중개행위신고센터&nbsp;</span></a></li>
-                        <li><a href="#"><span>학대,폭력신고센터&nbsp;</span></a></li>
+                        <li><a href="#"><span>· 학대·폭력신고센터&nbsp;</span></a></li>
                         <li><a href="#"><span>불법주정차스마트폰신고&nbsp;</span></a></li>
-                        <li><a href="#"><span>갑질 상담,제보 익명신고&nbsp;</span></a></li>
+                        <li><a href="#"><span>갑질 상담·제보 익명신고&nbsp;</span></a></li>
                       </ul>
                     </li>
                     <li class="li n1_1">
