--- a/클론코딩3/index.html
+++ b/클론코딩3/index.html
@@ -14,6 +14,7 @@
 
 <body>
   <header>
+    <!-- 최상단 mini GNB Area -->
     <div class="top-head">
       <div class="container inner">
         <div class="layout1">
@@ -30,7 +31,7 @@
         </div>
       </div>
     </div>
-
+    <!-- 상단 메인 GNB Area-->
     <div class="top-gnb">
       <div class="logo-gnb layout">
         <h1 class="logo-wrap" id="logo">
@@ -553,10 +554,20 @@
       </nav>
     </div>
   </header>
-  <!-- <h2>col 12</h2>
-      <div class="row">
-        <div class="col-12">col-12</div>
-      </div> -->
+  <!-- Main Area -->
+  <div id="body-layout">
+    <div class="main-wrap">
+      <div class="common-info-box">
+        <div class="layout">
+          
+        </div>
+      </div>
+    </div>
+    <!-- <h2>col 12</h2>
+    <div class="row">
+    <div class="col-12">col-12</div>
+  </div> -->
+  </div>
   <!-- Swiper -->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script type="text/javascript" src="./js/swiper.js">
