main영역 컨텐츠일부추가
main

--- a/클론코딩3/index.html
+++ b/클론코딩3/index.html
@@ -559,7 +559,24 @@
     <div class="main-wrap">
       <div class="common-info-box">
         <div class="layout">
-          
+          <div class="weather-box">
+            <div class="title-box">
+              <span class="title">
+                <a href="#">
+                  <strong>국가상징 알아보기</strong>
+                </a>
+              </span>
+              <span class="date">2022. 06. 01</span>
+            </div>
+            <div class="data-box">
+              <div class="condition-box"></div>
+              <div class="dust-box">
+                <strong>미세먼지</strong>
+                <span class="dust">28㎍/m³</span>
+                <span class="status em1">좋음</span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
