--- a/클론코딩3/index.html
+++ b/클론코딩3/index.html
@@ -577,6 +577,18 @@
               </div>
             </div>
           </div>
+          <div class="population-box">
+            <div class="title-box">
+                <a href="#">
+                  <strong>중구의 인구는?</strong>
+                </a>
+              <span>기준일자 : 2022. 4월말 기준</span>
+            </div>
+            <ul class="data-list">
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
