메인 컨텐츠 일부추가
메인 일부추가

--- a/클론코딩3/index.html
+++ b/클론코딩3/index.html
@@ -585,8 +585,22 @@
               <span>기준일자 : 2022. 4월말 기준</span>
             </div>
             <ul class="data-list">
-              <li></li>
-              <li></li>
+              <li>
+                <a href="#">
+                  <strong>
+                    <b>중구</b>
+                    "229,531명"
+                  </strong>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <strong>
+                    <b>대전시</b>
+                    "1,449,369명"
+                  </strong>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
