slider일부 커스텀

--- a/클론코딩3/index.html
+++ b/클론코딩3/index.html
@@ -619,19 +619,55 @@
                 <div class="swiper input-under-swiper">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <a href="#">test1</a></div>
+                      <div class="slide-inner-box">
+                      <a href="#">대형폐기물</a>
+                      </div>
+                    </div>
                     <div class="swiper-slide">
-                      <a href="#">test1</a></div>
+                      <div class="slide-inner-box">
+                      <a href="#">반려동물</a>
+                      </div>
+                    </div>
                     <div class="swiper-slide">
-                      <a href="#">test1</a></div>
+                      <div class="slide-inner-box">
+                      <a href="#">지역주택조합</a>
+                      </div>
+                    </div>
                     <div class="swiper-slide">
-                      <a href="#">test1</a></div>
+                      <div class="slide-inner-box">
+                      <a href="#">교통과</a>
+                      </div>
+                    </div>
                     <div class="swiper-slide">
-                      <a href="#">test1</a></div>
+                      <div class="slide-inner-box">
+                      <a href="#">폐기물</a>
+                      </div>
+                    </div>
                     <div class="swiper-slide">
-                      <a href="#">test1</a></div>
+                      <div class="slide-inner-box">
+                      <a href="#">건축과</a>
+                      </div>
+                    </div>
                     <div class="swiper-slide">
-                      <a href="#">test1</a></div>
+                      <div class="slide-inner-box">
+                      <a href="#">환경</a>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="slide-inner-box">
+                      <a href="#">환경과</a>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="slide-inner-box">
+                      <a href="#">정화조</a>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="slide-inner-box">
+                      <a href="#">음식물</a>
+                      </div>
+                    </div>
                   </div>
                   <div class="swiper-button-wrap1">
                     <div class="swiper-button-prev"></div>
@@ -653,8 +689,8 @@
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script>
     var swiper = new Swiper(".input-under-swiper", {
-      slidesPerView: 4,
-      spaceBetween: 30,
+      slidesPerView: 3,
+      spaceBetween: 5,
       centeredSlides: true,
       loop: true,
       pagination: {
