--- a/클론코딩3/index.html
+++ b/클론코딩3/index.html
@@ -670,14 +670,20 @@
                     </div>
                   </div>
                   <div class="swiper-button-wrap1">
-                    <div class="swiper-button-prev"></div>
                     <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
+      <div class="main-intro-box layout">
+        <div class="visual-box"></div>
+        <div class="intro-box"></div>
+        <div class="side-nav-box"></div>
+        <div class="main-nav-box"></div>        
       </div>
     </div>
     <!-- <h2>col 12</h2>
