--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <ul>
       <li><a href="./부트활용1/index.html">부트스트랩활용</a></li>
       <li><a href="./사스활용/index.html">사스활용</a></li>
-      <li><a href="./클론코딩/clone/index.html">첫번째 클론코딩</a></li>
-      <li><a href="./클론코딩2/index.html">두번째 클론코딩</a></li>
-      <li><a href="./클론코딩3/index.html">세번째</a></li>                    
+      <li><a href="./클론코딩/clone/index.html">첫번째</a></li>
+      <li><a href="./클론코딩2/index.html">두번째</a></li>
+      <li><a href="./클론코딩3/index.html">세번째</a></li>
     </ul>
   </body>
 </html>
