메인 컨텐츠 추가
ㅇ

--- a/클론코딩3/index.html
+++ b/클론코딩3/index.html
@@ -742,8 +742,67 @@
             </li>
           </ul>
         </div>
-        <div class="side-nav-box"></div>
-        <div class="main-nav-box"></div>
+        <div class="side-nav-box">
+          <ul class="side-nav-list">
+            <li>
+              <a href="#">
+                <span>직원검색</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span>찾아오시는길</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span>청사안내</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="main-nav-box">
+          <ul class="main-nav-list">
+            <li>
+              <a href="#">
+                <span>민원안내</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span>중구에바란다</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span>
+                  대형폐기물
+                  <br>
+                  수거신청
+                </span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span>당직병원안내</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span>중구 핫이슈</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span>
+                  성씨별 조형물
+                  <br>
+                  사이버투어
+                </span>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
     <!-- <h2>col 12</h2>
