새창으로열기 추가

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <body>
     김규범
     <ul>
-      <li><a href="./클론코딩/clone/index.html">첫번째</a></li>
-      <li><a href="./클론코딩2/index.html">두번째</a></li>
-      <li><a href="./사스활용/index.html">사스활용</a></li>
-      <li><a href="./부트활용1/index.html">부트스트랩활용</a></li>
-      <li><a href="./클론코딩3/index.html">세번째</a></li>
+      <li><a href="./클론코딩/clone/index.html" target="_blank">첫번째</a></li>
+      <li><a href="./클론코딩2/index.html" target="_blank">두번째</a></li>
+      <li><a href="./사스활용/index.html" target="_blank">사스활용</a></li>
+      <li><a href="./부트활용1/index.html" target="_blank">부트스트랩활용</a></li>
+      <li><a href="./클론코딩3/index.html" target="_blank">세번째</a></li>
     </ul>
   </body>
 </html>
